# deep-belief-betting

./: .gitignore  README.md  config.yaml  pyproject.toml  requirements.txt
configs/: config.yaml  default.yaml  ppo_smoke.yaml  ppo_train.yaml  test_config.yaml
notebooks/: belief_model_analysis.ipynb  model_notebook.ipynb  smoke-test.ipynb
src/agent_training/: device.py  training_config.py
src/agent_training/policy/: mlp_actor_critic.py
src/deep_belief_betting/: broker.py  env_factory.py  market_sim.py  parameters.py  prediction_market_env.py  pretraining_path_generator.py  smoke_train.py
src/deep_belief_betting/agent_training/: evaluate_ppo.py  run_layout.py  train_ppo.py  training_config.py
src/deep_belief_betting/agent_training/algorithms/: ppo.py
src/deep_belief_betting/belief_model/: __init__.py  data.py  evaluate.py  train.py  visualize.py
src/deep_belief_betting/simulation/: __init__.py  broker.py  env_factory.py  market_sim.py  parameters.py  prediction_market_env.py  pretraining_path_generator.py  smoke_train.py
src/model/: data.py  evaluate.py  model.py  train.py  visualize.py
tests/: test_broker.py  test_env.py  test_market_sim.py  test_parameters.py  test_ppo.py  test_pretraining_generator.py
