[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deep-belief-betting"
version = "0.1.0"
description = "roundtrip betting in prediction markets with belief pretraining and rl"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "pyyaml",
  "gymnasium",
  "torch",
  "matplotlib",
  "pytest",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]