[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deep-belief-betting"
version = "0.1.0"
description = "roundtrip betting in prediction markets with belief pretraining and rl"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "pyyaml",
  "gymnasium",
  "tensorboard",
  "torch",
  "matplotlib",
  "pytest",
]

[project.scripts]
dbb-generate-belief-data = "deep_belief_betting.simulation.pretraining_path_generator:main"
dbb-train-belief = "deep_belief_betting.belief_model.train:main"
dbb-train-ppo = "deep_belief_betting.agent_training.train_ppo:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
